[package]
name = "lapis"
version = "0.1.0"
edition = "2021"
default-run = "lapis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
enum_dispatch = "0.3"
