[package]
name = "lapis"
version = "0.1.0"
edition = "2021"
default-run = "lapis"

[workspace]
members = ["lapis-resp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
tokio = { version = "1", features = ["full"] }
enum_dispatch = "0.3"
lapis_resp = { path = "lapis-resp", version = "0.1" }
